sna: Clean up caches stored upon the batch bo

Until the advent of the VMA cache, we were safe to reap the batch bo by
hand. However, as we continue to add additional data to the bo, it is
wise to use the common free function.

Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=43899
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>